<?xml version="1.0" encoding="UTF-8"?>
<!--

       Copyright 2010-2025 the original author or authors.

       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

          https://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.mybatis</groupId>
    <artifactId>mybatis-parent</artifactId>
    <version>51</version>
    <relativePath />
  </parent>

  <groupId>org.mybatis</groupId>
  <artifactId>jpetstore</artifactId>
  <version>6.1.1-SNAPSHOT</version>
  <packaging>war</packaging>

  <name>JPetStore Demo 6</name>
  <url>https://www.mybatis.org/jpetstore-6/</url>

  <scm>
    <connection>scm:git:ssh://git@github.com/mybatis/jpetstore-6.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/mybatis/jpetstore-6.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/mybatis/jpetstore-6/</url>
  </scm>
  <issueManagement>
    <system>GitHub Issue Management</system>
    <url>https://github.com/mybatis/jpetstore-6/issues</url>
  </issueManagement>
  <ciManagement>
    <system>GitHub Actions</system>
    <url>https://github.com/mybatis/jpetstore-6/actions</url>
  </ciManagement>
  <distributionManagement>
    <site>
      <id>gh-pages-scm</id>
      <name>Mybatis GitHub Pages</name>
      <url>scm:git:ssh://git@github.com/mybatis/jpetstore-6.git</url>
    </site>
  </distributionManagement>

  <properties>
    <!-- Java Usage -->
    <java.version>17</java.version>
    <java.release.version>17</java.release.version>

    <cargo-maven3-plugin.version>1.10.25</cargo-maven3-plugin.version>
    <clirr.comparisonVersion>6.0.2</clirr.comparisonVersion>

    <slf4j.version>2.0.17</slf4j.version>
    <spring.version>6.2.15</spring.version>
    <assertj.version>3.27.6</assertj.version>
    <byte-buddy.version>1.18.3</byte-buddy.version>
    <mockito.version>5.21.0</mockito.version>
    <hsqldb.version>2.7.4</hsqldb.version>
    <module.name>org.mybatis.jpetstore</module.name>

    <!-- Reproducible Builds -->
    <project.build.outputTimestamp>1670877034</project.build.outputTimestamp>

    <!-- Surefire Setup -->
    <argLine>-javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/${byte-buddy.version}/byte-buddy-agent-${byte-buddy.version}.jar</argLine>
  </properties>

  <dependencies>

    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis</artifactId>
      <version>3.5.19</version>
    </dependency>
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis-spring</artifactId>
      <version>3.0.5</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-jdbc</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <!-- Keep spring-web at 5.3.39 until jakarta upgrade occurs -->
      <version>5.3.39</version>
    </dependency>
    <dependency>
      <groupId>net.sourceforge.stripes</groupId>
      <artifactId>stripes</artifactId>
      <version>1.6.0</version>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
        <exclusion>
          <groupId>log4j</groupId>
          <artifactId>log4j</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.taglibs</groupId>
      <artifactId>taglibs-standard-spec</artifactId>
      <version>1.2.5</version>
    </dependency>
    <dependency>
      <groupId>org.apache.taglibs</groupId>
      <artifactId>taglibs-standard-impl</artifactId>
      <version>1.2.5</version>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet.jsp</groupId>
      <artifactId>jakarta.servlet.jsp-api</artifactId>
      <version>2.3.6</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>4.0.4</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>${hsqldb.version}</version>
    </dependency>

    <!-- Due to osgi issue with mybatis spring, its required here for liberty -->
    <dependency>
      <groupId>org.springframework.batch</groupId>
      <artifactId>spring-batch-infrastructure</artifactId>
      <version>5.2.2</version>
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>net.bytebuddy</groupId>
      <artifactId>byte-buddy</artifactId>
      <version>${byte-buddy.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.bytebuddy</groupId>
      <artifactId>byte-buddy-agent</artifactId>
      <version>${byte-buddy.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>6.0.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.codeborne</groupId>
      <artifactId>selenide</artifactId>
      <version>7.13.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>htmlunit3-driver</artifactId>
      <version>4.39.0</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>jpetstore</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.5.1</version>
          <configuration>
            <archive>
              <manifestEntries>
                <Dependencies>jdk.unsupported</Dependencies>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>3.5.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <configuration>
            <locales>default,es,ja,ko</locales>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <configuration>
            <overwrite>true</overwrite>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.cargo</groupId>
          <artifactId>cargo-maven3-plugin</artifactId>
          <version>${cargo-maven3-plugin.version}</version>
          <configuration>
            <daemon>
              <properties>
                <cargo.daemon.url>http://localhost:18000</cargo.daemon.url>
                <cargo.daemon.handleid>${project.artifactId}</cargo.daemon.handleid>
              </properties>
            </daemon>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.codehaus.cargo</groupId>
        <artifactId>cargo-maven3-plugin</artifactId>
        <executions>
          <execution>
            <id>start-container</id>
            <goals>
              <goal>start</goal>
            </goals>
            <phase>pre-integration-test</phase>
          </execution>
          <execution>
            <id>stop-container</id>
            <goals>
              <goal>stop</goal>
            </goals>
            <phase>post-integration-test</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <!-- Profiles for Application Server -->
    <profile>
      <id>tomcat9</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <tomcat.major-version>9</tomcat.major-version>
        <tomcat.version>9.0.113</tomcat.version>
        <cargo.maven.containerId>tomcat${tomcat.major-version}x</cargo.maven.containerId>
        <cargo.maven.containerUrl>https://archive.apache.org/dist/tomcat/tomcat-${tomcat.major-version}/v${tomcat.version}/bin/apache-tomcat-${tomcat.version}.zip</cargo.maven.containerUrl>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <configuration>
              <container>
                <containerId>${cargo.maven.containerId}</containerId>
                <type>installed</type>
                <zipUrlInstaller>
                  <url>${cargo.maven.containerUrl}</url>
                </zipUrlInstaller>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <!-- TODO: Remove after we switch to jakarta as end of life -->
      <id>tomee80</id>
      <properties>
        <tomee.major-version>8</tomee.major-version>
        <tomee.version>8.0.16</tomee.version>
        <cargo.maven.containerId>tomee${tomee.major-version}x</cargo.maven.containerId>
        <cargo.maven.containerUrl>https://repo1.maven.org/maven2/org/apache/tomee/apache-tomee/${tomee.version}/apache-tomee-${tomee.version}-plume.zip</cargo.maven.containerUrl>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <configuration>
              <container>
                <containerId>${cargo.maven.containerId}</containerId>
                <type>installed</type>
                <zipUrlInstaller>
                  <url>${cargo.maven.containerUrl}</url>
                </zipUrlInstaller>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>wildfly26</id>
      <!-- TODO: Remove after we switch to jakarta as end of life -->
      <properties>
        <wildfly.major-version>26</wildfly.major-version>
        <wildfly.version>26.1.3.Final</wildfly.version>
        <cargo.maven.containerId>wildfly${wildfly.major-version}x</cargo.maven.containerId>
        <cargo.maven.containerUrl>https://github.com/wildfly/wildfly/releases/download/${wildfly.version}/wildfly-${wildfly.version}.zip</cargo.maven.containerUrl>
        <cargo.jvmargs>--add-opens=java.base/java.util=ALL-UNNAMED</cargo.jvmargs>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <configuration>
              <container>
                <containerId>${cargo.maven.containerId}</containerId>
                <type>installed</type>
                <zipUrlInstaller>
                  <url>${cargo.maven.containerUrl}</url>
                </zipUrlInstaller>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>liberty-ee8</id>
      <properties>
        <liberty.version>25.0.0.5</liberty.version>
        <cargo.maven.containerId>liberty</cargo.maven.containerId>
        <cargo.maven.containerUrl>https://repo1.maven.org/maven2/com/ibm/websphere/appserver/runtime/wlp-javaee8/${liberty.version}/wlp-javaee8-${liberty.version}.zip</cargo.maven.containerUrl>
        <cargo.deploy.timeout>300000</cargo.deploy.timeout>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <configuration>
              <container>
                <containerId>${cargo.maven.containerId}</containerId>
                <type>installed</type>
                <zipUrlInstaller>
                  <url>${cargo.maven.containerUrl}</url>
                </zipUrlInstaller>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>jetty</id>
      <properties>
        <jetty.major-version>12</jetty.major-version>
        <jetty.version>12.1.5</jetty.version>
        <cargo.maven.containerId>jetty${jetty.major-version}x</cargo.maven.containerId>
        <cargo.jetty.deployer.ee.version>ee8</cargo.jetty.deployer.ee.version>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <configuration>
              <container>
                <containerId>jetty12x</containerId>
                <type>installed</type>
                <artifactInstaller>
                  <groupId>org.eclipse.jetty</groupId>
                  <artifactId>jetty-home</artifactId>
                  <version>${jetty.version}</version>
                </artifactInstaller>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <!-- Use 'payara5' as this is not supported with java 17 due to hk2 'dcs' is null error. -->
      <id>glassfish5</id>
      <properties>
        <glassfish.major-version>5</glassfish.major-version>
        <glassfish.version>5.1.0</glassfish.version>
        <cargo.maven.containerId>glassfish${glassfish.major-version}x</cargo.maven.containerId>
        <cargo.maven.containerUrl>https://repo.maven.apache.org/maven2/org/glassfish/main/distributions/glassfish/${glassfish.version}/glassfish-${glassfish.version}.zip</cargo.maven.containerUrl>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <configuration>
              <container>
                <containerId>${cargo.maven.containerId}</containerId>
                <type>installed</type>
                <zipUrlInstaller>
                  <url>${cargo.maven.containerUrl}</url>
                </zipUrlInstaller>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>payara5</id>
      <properties>
        <payara.major-version>5</payara.major-version>
        <payara.version>5.2022.5</payara.version>
        <cargo.maven.containerId>payara</cargo.maven.containerId>
        <cargo.maven.containerUrl>https://repo.maven.apache.org/maven2/fish/payara/distributions/payara/${payara.version}/payara-${payara.version}.zip</cargo.maven.containerUrl>
        <cargo.startup.timeout>300000</cargo.startup.timeout>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <configuration>
              <container>
                <containerId>${cargo.maven.containerId}</containerId>
                <type>installed</type>
                <zipUrlInstaller>
                  <url>${cargo.maven.containerUrl}</url>
                </zipUrlInstaller>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>resin</id>
      <properties>
        <resin.major-version>4</resin.major-version>
        <resin.version>4.0.67</resin.version>
        <cargo.maven.containerId>resin${resin.major-version}x</cargo.maven.containerId>
        <!-- Do not use https as the certificate is bad which prevents this from working! -->
        <cargo.maven.containerUrl>http://caucho.com/download/resin-${resin.version}.zip</cargo.maven.containerUrl>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-war-plugin</artifactId>
            <configuration>
              <packagingExcludes>WEB-INF/beans.xml</packagingExcludes>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <configuration>
              <container>
                <containerId>${cargo.maven.containerId}</containerId>
                <type>installed</type>
                <zipUrlInstaller>
                  <url>${cargo.maven.containerUrl}</url>
                </zipUrlInstaller>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
